--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "node-cron": "^2.0.3",
-    "node-notifier": "^5.2.1",
-    "opn": "^5.3.0"
+    "node-notifier": "^5.2.1"
   }
 }
