--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "index.js",
   "author": "Alberto Manfrinati",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "dotenv": "^6.2.0",
     "node-cron": "^2.0.3",
-    "node-notifier": "^5.2.1"
+    "node-notifier": "^10.0.1"
+  },
+  "devDependencies": {
+    "prettier": "3.0.0"
   }
 }
